--- a/.eslintrc
+++ b/.eslintrc
@@ -6,11 +6,12 @@
   },
 
   "env": {
-    "browser": 1
+    "browser": true
   },
 
   // Declare allowed global variables below
   "globals": {
     "svg4everybody" : false,
+    "cornify_add": false
   }
 }
