--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,8 @@
   // Declare allowed global variables below
   "globals": {
     "svg4everybody" : false,
+    "Barba" : false,
+    "initTyping" : false,
     "cornify_add": false
   }
 }
