--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-autoprefixer": "^3.0.2",
     "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.1",
     "gulp-eslint": "^3.0.1",
     "gulp-file-include": "^1.0.0",
     "gulp-imagemin": "^2.3.0",
