Finish new hugo architecture

--- a/site/config.toml
+++ b/site/config.toml
@@ -1,3 +1,3 @@
-baseURL = "http://example.org/"
+baseURL = "https://maelbrunet.com/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Maël Brunet, web developer & designer"
