--- a/site/config.toml
+++ b/site/config.toml
@@ -1,3 +1,3 @@
-baseURL = "https://maelbrunet.com/"
+baseURL = "https://www.maelbrunet.com/"
 languageCode = "en-us"
 title = "Maël Brunet, web developer & designer"
