Optimize project thumbnails

--- a/site/data/projects.json
+++ b/site/data/projects.json
@@ -21,7 +21,7 @@
     "name": "Patchs littéraires",
     "publicationYear": "2017",
     "category": "bot",
-    "thumbnail": "patchs-littéraires.png",
+    "thumbnail": "patchs-littéraires.jpg",
     "description": "A Twitter bot that \"improves\" literary classics with video game patch notes. Built using Cheap Bots, Done Quick! Tweets in French.",
     "url": "https://twitter.com/patchslitt"
   },
