--- a/site/data/projects.json
+++ b/site/data/projects.json
@@ -21,7 +21,7 @@
     "name": "Patchs littéraires",
     "publicationYear": "2017",
     "category": "bot",
-    "thumbnail": "patchs-littéraires.jpg",
+    "thumbnail": "patchs-litteraires.jpg",
     "description": "A Twitter bot that \"improves\" literary classics with video game patch notes. Built using Cheap Bots, Done Quick! Tweets in French.",
     "url": "https://twitter.com/patchslitt"
   },
@@ -46,8 +46,17 @@
     "name": "In search of the ideal icon system",
     "publicationYear": "2017",
     "category": "presentation",
-    "thumbnail": "icon-system.jpg",
+    "thumbnail": "icon-system.png",
     "description": "A presentation about best practices for using icons on the web.",
     "url": "http://slides.com/maelig/in-search-of-the-ideal-icon-system"
+  },
+  {
+    "name": "Français MOFO",
+    "publicationYear": "2017",
+    "category": "bot",
+    "thumbnail": "francais-mofo.jpg",
+    "description": "A Twitter bot built in Node.js that looks for English words used in a French sentence and suggests appropriate translations.",
+    "url": "https://twitter.com/francais_mofo",
+    "code": "https://github.com/maeligg/francais-mofo"
   }
 ]
