--- a/site/data/projects.json
+++ b/site/data/projects.json
@@ -81,7 +81,8 @@
     "category": "website",
     "thumbnail": "guardian-1959.png",
     "description":
-      "An experiment with CSS grid layout. Read today's news from The Guardian, in its original(ish) 1959",
-    "url": "https://trusting-hypatia-359407.netlify.com/"
+      "An experiment with CSS grid layout. Read today's news from The Guardian, in its original(ish) 1959 layout.",
+    "url": "https://trusting-hypatia-359407.netlify.com/",
+    "code": "https://github.com/maeligg/guardian-1959"
   }
 ]
