--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "HTML-boilerplate",
+  "name": "maelbrunet",
   "version": "1.0.0",
-  "description": "Front-end HTML boilerplate",
+  "description": "The personal website of Maël Brunet",
   "dependencies": {},
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
+    "concurrently": "^3.5.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.2.0",
@@ -25,6 +26,7 @@
     "gulp-util": "^3.0.6"
   },
   "scripts": {
-    "build": "gulp build && cd site && hugo"
+    "build": "gulp build && cd site && hugo",
+    "watch": "concurrently \"gulp\" \"cd site && hugo server\""
   }
 }
