Add cookie notice message

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
     "svg4everybody" : false,
     "Barba" : false,
     "initTyping" : false,
-    "cornify_add": false
+    "cornify_add": false,
+    "Cookies": false
   }
 }
