--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "The personal website of Maël Brunet",
   "dependencies": {},
   "devDependencies": {
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "concurrently": "^3.5.1",
     "eslint": "^3.19.0",
@@ -14,7 +16,6 @@
     "gulp-babel": "^6.1.2",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
-    "gulp-eslint": "^3.0.1",
     "gulp-imagemin": "^2.3.0",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
@@ -22,11 +23,16 @@
     "gulp-sequence": "^0.4.6",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svg-symbols": "^2.0.2",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.6"
+    "gulp-util": "^3.0.6",
+    "rollup": "^0.65.0",
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-eslint": "^5.0.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-terser": "^1.0.1"
   },
   "scripts": {
     "build": "gulp build && cd site && hugo",
-    "watch": "concurrently \"gulp\" \"cd site && hugo server\""
+    "watch": "concurrently \"gulp\" \"cd site && hugo server\"",
+    "bundle": "rollup -c"
   }
 }
